--- a/api-reference/endpoint/balance.mdx
+++ b/api-reference/endpoint/balance.mdx
@@ -2,23 +2,11 @@
 title: "Get Native Balance for an Address"
 api: "GET /v2/api"
 keywords: ["Ether balance", "Etherscan balance"]
+mode: "wide"
 ---
 
 import { chain, chainCurrency } from '/snippets/custom-variables.mdx';
 import { TryEndpointLink } from '/snippets/try-endpoint-link.jsx';
-
-  <RequestExample>
-
-```plaintext Try in Your Browser
-https://api.etherscan.io/v2/api?chainid=1&module=account&action=balance&address=0xf5690ee572102ef19fa5d0452b71e395eaae3083&tag=latest&apikey=YourApiKeyToken
-```
-
-```bash cURL
-curl --request POST \
-    --url https://dog-api.kinduff.com/api/facts
-```
-
-</RequestExample>
 
   <ParamField query="apikey" type="string">
     Your Etherscan API key. If you're still using a legacy key from another explorer like BscScan/Basescan and so on, please refer to this migration.
